2009-02-13  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (dump_unwindsyms): Use \n instead of endl throughout
	for writing to the generated .c/.h files.

2009-02-12  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (procfs_derived_probe_group::emit_module_decls):
	Moved inclusion of procfs.c here from runtime/transport.c

2009-02-12  Mark Wielaard  <mjw@redhat.com>

	* translate.cxx (dump_unwindsyms): Use "\n" instead of endl in
	inner loops.

2009-02-11  Dave Brolley  <brolley@redhat.com>

	* stap-client: s/jar/zip/.
	(unpack_response): Server response is now a .zip file. No longer
	signed, so no longer needs verification. Move Contents of server
	response down one directory level. META-INF no longer required to be
	present in the server response.
	* stap-server: s/jar/zip/.
	(create_response): Don't sign the server response. Use zip instead.
	* stap-server-connect.c: s/jar/zip/.

2009-02-10  Josh Stone  <jistone@redhat.com>

	* staptree.h (update_visitor::require): Add a clearok parameter for
	optimizing traversers to signal that they're ready for NULL back.
	* elaborate.cxx (dead_assignment_remover): Convert into an
	update_visitor and remove its now-redundant traversal methods.
	* elaborate.cxx (dead_stmtexpr_remover): Convert to an update_visitor.
	* elaborate.cxx (void_statement_reducer): Convert to an update_visitor.

2009-02-10  Josh Stone  <jistone@redhat.com>

	* tapsets.cxx (var_expanding_copy_visitor): This struct becomes
	var_expanding_visitor and inherits from update_visitor instead of
	deep_copy_visitor.  Each of the probe-type variants of this are also no
	longer copiers.

2009-02-10  Josh Stone  <jistone@redhat.com>

	* staptree.h (update_visitor): A new visitor to make it easier to
	rewrite parts of a probe or function without making a full copy.
	* staptree.cxx (update_visitor::*): Each child is recursed with a
	require() call, and then the parent returns itself with provide().