@@ -1,3 +1,8 @@
+2009-02-15  Stan Cox  <scox@redhat.com>
+
+	* tapsets.cxx (dwflpp::iterate_over_cu_labels): Handle missing DW_AT_low_pc
+	* (dwarf_builder::build): Handle c++ via .probe, c via .label.
+
 2009-02-13  Frank Ch. Eigler  <fche@elastic.org>
 
 	* translate.cxx (dump_unwindsyms): Use \n instead of endl throughout
